<resources>
    <string name="app_name">TennisTimeTable</string>

    <string name="image_contentDescription">Image</string>
    <string name="lets_get_started_text">Zaczynajmy</string>
    <string name="intro_text_description">Sprawdzaj dostępność i umawiaj się na sparingi oraz treningi</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_up">Zarejestruj się</string>

    <string name="sign_up_description_text">Podaj imię, email i hasło by się zarejestrować.</string>
    <string name="name">Imię</string>
    <string name="password">Hasło</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Podaj email i hasło by się zalogować.</string>

    <string name="please_click_back_again_to_exit">Proszę nacisnąć powrót jeszcze raz by wyjść.</string>
    <string name="please_wait">Proszę czekać&#8230;</string>

    <string name="nav_my_profile">Mój profil</string>
    <string name="nav_sign_out">Wyloguj się</string>

    <string name="mobile">Numer telefonu</string>
    <string name="update">Aktualizuj</string>
    <string name="my_profile">Mój profil</string>

    <string name="create_board_title">Dodaj grupę rezerwacji</string>
    <string name="add">Dodaj</string>
    <string name="board_name">Nazwa grupy rezerwacji</string>

    <string name="sparing">Sparing</string>
    <string name="training">Trening</string>

    <string name="court1">Kort 1</string>
    <string name="court2">Kort 2</string>
    <string name="court3">Kort 3</string>
    <string name="court4">Kort 4</string>


    <string name="sparing_single">Sparing singlowy</string>
    <string name="sparing_doubles">Sparing deblowy</string>

    <string name="training_solo">Trening indywidualny</string>
    <string name="training_group">Trening grupowy</string>

    <string name="choose_time">Wybierz godzinę rozpoczęcia</string>

    <string name="half_hour">0.5 godz</string>
    <string name="hour">1 godz</string>
    <string name="hour_and_half">1.5 godz</string>
    <string name="two_hours">2 godz</string>

    <string name="add_training">Dodaj trening</string>
    <string name="choose_coach">Wybierz trenera</string>
    <string name="no_reservatiobs_are_available">Brak rezerwacji</string>
    <string name="reservation">Rezerwacja</string>


    <string name="default_notification_channel_id">tennistimetable_notification_channel_id</string>
    <string name="sparing_partner">Wybierz sparingpartnera</string>

</resources>